--- a/css/resume.css
+++ b/css/resume.css
@@ -318,7 +318,7 @@ p {
     color: var(--text-color);
     margin-bottom: 50px;
     width: 100%; /* Ensures full width for proper centering */
-    font-size: 20px; /* Adjust text size as needed */
+    font-size: 30px; /* Adjust text size as needed */
     font-weight: bold; /* Make text bold */
 }
 
@@ -864,6 +864,18 @@ p {
         --card-margin: 10px 0;
         --full-width: 100%;
         --profile-container-size: 100px;
+    }
+
+    .header .header-links, .header h1 {
+        display: flex;
+        justify-content: center; /* Ensures content is centered within each flex container */
+        align-items: center;
+        flex-direction: column;
+        color: var(--text-color);
+        margin-bottom: 50px;
+        width: 100%; /* Ensures full width for proper centering */
+        font-size: 15px; /* Adjust text size as needed */
+        font-weight: bold; /* Make text bold */
     }
 
     img {
