--- a/css/resume.css
+++ b/css/resume.css
@@ -899,14 +899,15 @@ p {
 
     .header .header-links, .header h1 {
         display: flex;
-        justify-content: center; /* Ensures content is centered within each flex container */
+        justify-content: center;
         align-items: center;
         flex-direction: column;
         color: var(--text-color);
         margin-bottom: 50px;
-        width: 100%; /* Ensures full width for proper centering */
-        font-size: 15px; /* Adjust text size as needed */
-        font-weight: bold; /* Make text bold */
+        width: 100%;
+        font-size: 15px;
+        font-weight: bold;
+        line-height: 2.5;
     }
 
     img {
